--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <title>Spotify</title>
 </head>
 <body>
@@ -15,11 +16,28 @@
         <div class="side-nav"></div>
 
         <div class="container">
+
+            <nav class="main-nav">
+                <ul class="main-list">
+                    <li><a href="">IN EVIDENZA</a></li>
+                    <li><a href="">PODCAST</a></li>
+                    <li><a href="">CLASSIFICHE</a></li>
+                    <li><a href="">GENERI E MOOD</a></li>
+                    <li><a href="">NUOVE USCITE</a></li>
+                    <li><a href="">SCOPRI</a></li>
+                </ul>
+            </nav>
+
+
+            <div class="row">
+                <h2>Recently played</h2>
+            </div>
+            
         </div>
 
 
 
-        
+
         <div class="bottom-nav"></div>
 
     </main>
