--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Spotify</title>
 </head>
 <body>
@@ -31,11 +32,90 @@
 
             <div class="row">
                 <h2>Recently played</h2>
+                <div class="row-cards">
+
+                    <div class="card">
+                        <img src="img/metal_lifting.jpg">
+                        <h3>Heavy Metal</h3>
+                        <span class="subtitle">Subtitle</span>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/stranger.jpeg">
+                        <h3>Heavy Metal</h3>
+                        <span class="subtitle">Subtitle</span>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/aquietplace.jpeg">
+                        <h3>Heavy Metal</h3>
+                        <span class="subtitle">Subtitle</span>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/split.jpeg">
+                        <h3>Heavy Metal</h3>
+                        <span class="subtitle">Subtitle</span>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/cure.jpeg">
+                        <h3>Heavy Metal</h3>
+                        <span class="subtitle">Subtitle</span>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/sinister.jpeg">
+                        <h3>Heavy Metal</h3>
+                        <span class="subtitle">Subtitle</span>
+                    </div>
+
+                </div>
             </div>
-            
-        </div>
 
 
+            <!-- second row -->
+
+
+            <div class="row">
+                <h2>Creato per John Doe</h2>
+                <span class="subtitle">Più ascolti, più accurati sono i suggerimenti.</span>
+                <div class="row-cards">
+
+                    <div class="card">
+                        <img src="img/radar.jpeg">
+                        <h3>Release Radarl</h3>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/mixdaily.jpeg">
+                        <h3>Heavy Metal</h3>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!-- third row -->
+
+
+            <div class="row">
+                <h2>Artisti più popolari</h2>
+                <span class="subtitle">Più ascolti, più accurati sono i suggerimenti.</span>
+                <div class="row-cards">
+
+                    <div class="card circle-img">
+                        <img src="img/youg.jpeg">
+                        <h3>Release Radarl</h3>
+                    </div>
+
+                    <div class="card circle-img">
+                        <img src="img/einaudi.jpeg">
+                        <h3>Heavy Metal</h3>
+                    </div>
+
+                </div>
+            </div>
 
 
         <div class="bottom-nav"></div>
