--- a/index.html
+++ b/index.html
@@ -14,7 +14,37 @@
     <main>
         <div class="upgrade-btn"><button>EFFETTUA L'UPGRADE</button></div>
 
-        <div class="side-nav"></div>
+        <div class="side-nav">
+
+            <div class="logo-big"><img src="img/logo.svg"></div>
+        
+
+            <div class="icone">
+                <span><i class="fa-solid fa-house"></i> Home</span>
+
+                <span><i class="fa-solid fa-magnifying-glass"></i> Cerca</span>
+
+                <span><i class="fa-solid fa-lines-leaning"></i> La tua libreria</span>
+            </div>
+
+
+            <div class="playlist">
+                <h2>PLAYLIST</h2>
+                <span><i class="fa-sharp fa-solid fa-square-plus"></i> Crea Playlist</span>
+
+                <ul>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+
+                </ul>
+            </div>
+
+
+        </div>
 
         <div class="container">
 
