--- a/index.html
+++ b/index.html
@@ -14,38 +14,57 @@
     <main>
         <div class="upgrade-btn"><button>EFFETTUA L'UPGRADE</button></div>
 
+
+        <!-- aside -->
         <div class="side-nav">
 
-            <div class="logo-big"><img src="img/logo.svg"></div>
+            
         
+            <div class="content-top">
 
-            <div class="icone">
-                <span><i class="fa-solid fa-house"></i> Home</span>
+                <div class="logo-big"><img src="img/logo.svg"></div>
 
-                <span><i class="fa-solid fa-magnifying-glass"></i> Cerca</span>
+                <div class="icone">
+                    <span><i class="fa-solid fa-house"></i> Home</span>
 
-                <span><i class="fa-solid fa-lines-leaning"></i> La tua libreria</span>
+                    <span><i class="fa-solid fa-magnifying-glass"></i> Cerca</span>
+
+                    <span><i class="fa-solid fa-lines-leaning"></i> La tua libreria</span>
+                </div>
+
+
+                <div class="playlist">
+                    <h2>PLAYLIST</h2>
+                    <span><i class="fa-sharp fa-solid fa-square-plus"></i> Crea Playlist</span>
+
+                    <ul>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+                </div>
             </div>
 
 
-            <div class="playlist">
-                <h2>PLAYLIST</h2>
-                <span><i class="fa-sharp fa-solid fa-square-plus"></i> Crea Playlist</span>
+            <div class="content-bottom">
+                <span class="install"><img src="img/download.svg" alt=""> Installa app</span>
 
-                <ul>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
-                    <li>Nome Playlist</li>
+                <hr>
 
-                </ul>
+                <span class="profile">
+                    <img src="img/profile.svg" alt="">
+                    <h3>John Doe</h3>
+                </span>
             </div>
 
 
         </div>
 
+
+        <!-- main -->
         <div class="container">
 
             <nav class="main-nav">
@@ -148,6 +167,7 @@
             </div>
 
 
+            <!-- bottom nav -->
         <div class="bottom-nav"></div>
 
     </main>
