add calc media query

--- a/index.html
+++ b/index.html
@@ -83,40 +83,52 @@
                 <h2>Recently played</h2>
                 <div class="row-cards">
 
-                    <div class="card">
-                        <img src="img/metal_lifting.jpg">
-                        <h3>Heavy Metal</h3>
-                        <span class="subtitle">Subtitle</span>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/metal_lifting.jpg">
+                            <h3>Heavy Metal</h3>
+                            <span class="subtitle">Subtitle</span>
+                        </div>
                     </div>
 
-                    <div class="card">
-                        <img src="img/stranger.jpeg">
-                        <h3>Heavy Metal</h3>
-                        <span class="subtitle">Subtitle</span>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/stranger.jpeg">
+                            <h3>Heavy Metal</h3>
+                            <span class="subtitle">Subtitle</span>
+                        </div>
                     </div>
 
-                    <div class="card">
-                        <img src="img/aquietplace.jpeg">
-                        <h3>Heavy Metal</h3>
-                        <span class="subtitle">Subtitle</span>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/aquietplace.jpeg">
+                            <h3>Heavy Metal</h3>
+                            <span class="subtitle">Subtitle</span>
+                        </div>
                     </div>
 
-                    <div class="card">
-                        <img src="img/split.jpeg">
-                        <h3>Heavy Metal</h3>
-                        <span class="subtitle">Subtitle</span>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/split.jpeg">
+                            <h3>Heavy Metal</h3>
+                            <span class="subtitle">Subtitle</span>
+                        </div>
                     </div>
 
-                    <div class="card">
-                        <img src="img/cure.jpeg">
-                        <h3>Heavy Metal</h3>
-                        <span class="subtitle">Subtitle</span>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/cure.jpeg">
+                            <h3>Heavy Metal</h3>
+                            <span class="subtitle">Subtitle</span>
+                        </div>
                     </div>
 
-                    <div class="card">
-                        <img src="img/sinister.jpeg">
-                        <h3>Heavy Metal</h3>
-                        <span class="subtitle">Subtitle</span>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/sinister.jpeg">
+                            <h3>Heavy Metal</h3>
+                            <span class="subtitle">Subtitle</span>
+                        </div>
                     </div>
 
                 </div>
@@ -131,14 +143,18 @@
                 <span class="subtitle">Più ascolti, più accurati sono i suggerimenti.</span>
                 <div class="row-cards">
 
-                    <div class="card">
-                        <img src="img/radar.jpeg">
-                        <h3>Release Radarl</h3>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/radar.jpeg">
+                            <h3>Release Radarl</h3>
+                        </div>
                     </div>
 
-                    <div class="card">
-                        <img src="img/mixdaily.jpeg">
-                        <h3>Heavy Metal</h3>
+                    <div class="cell">
+                        <div class="card">
+                            <img src="img/mixdaily.jpeg">
+                            <h3>Heavy Metal</h3>
+                        </div>
                     </div>
 
                 </div>
@@ -153,16 +169,20 @@
                 <span class="subtitle">Più ascolti, più accurati sono i suggerimenti.</span>
                 <div class="row-cards">
 
-                    <div class="card circle-img">
-                        <img src="img/youg.jpeg">
-                        <h3>Release Radarl</h3>
+                    <div class="cell">
+                        <div class="card circle-img">
+                            <img src="img/youg.jpeg">
+                            <h3>Release Radarl</h3>
+                        </div>
                     </div>
 
-                    <div class="card circle-img">
-                        <img src="img/einaudi.jpeg">
-                        <h3>Heavy Metal</h3>
+                    <div class="cell">
+                        <div class="card circle-img">
+                            <img src="img/einaudi.jpeg">
+                            <h3>Heavy Metal</h3>
+                        </div>
                     </div>
-
+                    
                 </div>
             </div>
 
