add player icon

--- a/index.html
+++ b/index.html
@@ -201,7 +201,51 @@
 
 
             <!-- bottom nav -->
-        <div class="bottom-nav"></div>
+        <div class="bottom-nav">
+
+            <div class="content-left">
+
+                <div class="img-playing"><img src="img/sinister.jpeg"></div>
+
+                <span class="title-playing">
+                    <h5>Sinister</h5>
+                    brano name
+                </span>
+
+                <div class="icon-playing">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+
+            </div>
+
+
+            <div class="content-center">
+
+                <div class="icon-player">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+
+                <hr class="player-line">
+            </div>
+
+
+            <div class="content-right">
+                
+                <div class="icon-volume">
+                    <i class="fa-solid fa-list-ul"></i>
+                    <i class="fa-solid fa-display"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                    <hr class="volume-line">
+                </div>
+
+            </div>
+
+        </div>
 
     </main>
 </body>
