add some hover effect

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
                     <div class="cell">
                         <div class="card">
+                            <i class="fa-regular fa-circle-play hidden"></i>
                             <img src="img/metal_lifting.jpg">
                             <h3>Heavy Metal</h3>
                             <span class="subtitle">Subtitle</span>
@@ -106,6 +107,7 @@
 
                     <div class="cell">
                         <div class="card">
+                            <i class="fa-regular fa-circle-play hidden"></i>
                             <img src="img/stranger.jpeg">
                             <h3>Heavy Metal</h3>
                             <span class="subtitle">Subtitle</span>
@@ -114,6 +116,7 @@
 
                     <div class="cell">
                         <div class="card">
+                            <i class="fa-regular fa-circle-play hidden"></i>
                             <img src="img/aquietplace.jpeg">
                             <h3>Heavy Metal</h3>
                             <span class="subtitle">Subtitle</span>
@@ -122,6 +125,7 @@
 
                     <div class="cell">
                         <div class="card">
+                            <i class="fa-regular fa-circle-play hidden"></i>
                             <img src="img/split.jpeg">
                             <h3>Heavy Metal</h3>
                             <span class="subtitle">Subtitle</span>
@@ -130,6 +134,7 @@
 
                     <div class="cell">
                         <div class="card">
+                            <i class="fa-regular fa-circle-play hidden"></i>
                             <img src="img/cure.jpeg">
                             <h3>Heavy Metal</h3>
                             <span class="subtitle">Subtitle</span>
@@ -138,6 +143,7 @@
 
                     <div class="cell">
                         <div class="card">
+                            <div class="play-hidden"><i class="fa-regular fa-circle-play"></i></div>
                             <img src="img/sinister.jpeg">
                             <h3>Heavy Metal</h3>
                             <span class="subtitle">Subtitle</span>
@@ -209,7 +215,7 @@
 
                 <span class="title-playing">
                     <h5>Sinister</h5>
-                    brano name
+                    <div>brano name</div>
                 </span>
 
                 <div class="icon-playing">
