add player line

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 <div class="play-hidden"><i class="fa-regular fa-circle-play"></i></div>
                                 <img src="img/mixdaily.jpeg">
                             </div>
-                            
+
                             <h3>Heavy Metal</h3>
                         </div>
                     </div>
@@ -269,7 +269,12 @@
                     <i class="fa-solid fa-rotate-right"></i>
                 </div>
 
-                <hr class="player-line">
+                <div class="player-container">
+                    <div class="player-line">
+                        <div class="line-color"></div>
+                    </div>
+                </div>
+
             </div>
 
 
