add volume line effect

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                 <div class="player-container">
                     <div class="player-line">
-                        <div class="line-color"></div>
+                        <div class="line-color"><div class="dot"></div></div>
                     </div>
                 </div>
 
@@ -284,7 +284,12 @@
                     <i class="fa-solid fa-list-ul"></i>
                     <i class="fa-solid fa-display"></i>
                     <i class="fa-solid fa-volume-high"></i>
-                    <hr class="volume-line">
+
+                    <div class="volume-container">
+                        <div class="volume-line">
+                            <div class="line-color"><div class="dot"></div></div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
