--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                                 <img src="img/stranger.jpeg">
                             </div>
                             
-                            <h3>Heavy Metal</h3>
-                            <span class="subtitle">Subtitle</span>
+                            <h3>Stranger Things,Vol.1(a Netflix Original Series Soundtrack)</h3>
+                            <span class="subtitle">Kylie Dixon & Micheal Stein</span>
                         </div>
                     </div>
 
@@ -129,7 +129,7 @@
                                 <div class="play-hidden"><i class="fa-regular fa-circle-play"></i></div>
                                 <img src="img/aquietplace.jpeg">
                             </div>
-                            <h3>Heavy Metal</h3>
+                            <h3>A quiet place<</h3>
                             <span class="subtitle">Subtitle</span>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                                 <img src="img/split.jpeg">
                             </div>
 
-                            <h3>Heavy Metal</h3>
+                            <h3>Split</h3>
                             <span class="subtitle">Subtitle</span>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                                 <img src="img/cure.jpeg">
                             </div>
 
-                            <h3>Heavy Metal</h3>
+                            <h3>A cure for wellness</h3>
                             <span class="subtitle">Subtitle</span>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                                 <img src="img/sinister.jpeg">
                             </div>
 
-                            <h3>Heavy Metal</h3>
+                            <h3>Sinister</h3>
                             <span class="subtitle">Subtitle</span>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                                 <img src="img/radar.jpeg">
                             </div>
 
-                            <h3>Release Radarl</h3>
+                            <h3>Release Radar</h3>
                         </div>
                     </div>
 
@@ -205,7 +205,7 @@
                                 <img src="img/mixdaily.jpeg">
                             </div>
 
-                            <h3>Heavy Metal</h3>
+                            <h3>Daily Mix 1</h3>
                         </div>
                     </div>
 
@@ -224,7 +224,7 @@
                     <div class="cell">
                         <div class="card circle-img">
                             <img src="img/youg.jpeg">
-                            <h3>Release Radarl</h3>
+                            <h3>Lana Del Rey</h3>
                         </div>
                     </div>
 
