add hover effect on ul

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <div class="play-hidden"><i class="fa-regular fa-circle-play"></i></div>
                                 <img src="img/aquietplace.jpeg">
                             </div>
-                            <h3>A quiet place<</h3>
+                            <h3>A quiet place</h3>
                             <span class="subtitle">Subtitle</span>
                         </div>
                     </div>
@@ -223,15 +223,25 @@
 
                     <div class="cell">
                         <div class="card circle-img">
-                            <img src="img/youg.jpeg">
+
+                            <div class="hidden-container">
+                                <div class="play-hidden"><i class="fa-regular fa-circle-play"></i></div>
+                                <img src="img/youg.jpeg">
+                            </div>
+
                             <h3>Lana Del Rey</h3>
                         </div>
                     </div>
 
                     <div class="cell">
                         <div class="card circle-img">
-                            <img src="img/einaudi.jpeg">
-                            <h3>Heavy Metal</h3>
+
+                            <div class="hidden-container">
+                                <div class="play-hidden"><i class="fa-regular fa-circle-play"></i></div>
+                                <img src="img/einaudi.jpeg">
+                            </div>   
+
+                            <h3>Einaudi</h3>
                         </div>
                     </div>
                     
