--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="logo-big hidden"><img src="img/logo.svg"></div>
 
                 <div class="icone">
-                    <span>
+                    <span class="green-line">
                         <img src="img/home.svg" class="home">
                             <span class="hidden">Home</span> 
                         </span>
