class name change to fix green light

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                 <div class="logo-big hidden"><img src="img/logo.svg"></div>
 
                 <div class="icone">
-                    <span class="green-line">
+                    <span class="green-line-static">
                         <img src="img/home.svg" class="home">
                             <span class="hidden">Home</span> 
                         </span>
 
-                    <span>
+                    <span class="green-line">
                         <img src="img/search.svg" class="search">
                         <span class="hidden"> Cerca</span>
                     </span>
 
-                    <span>
+                    <span class="green-line">
                         <img src="img/libreria.svg" class="libreria">
                         <span class="hidden">La tua libreria</span>
                     </span>
